--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "server":"nodemon backend/server"
+    "server": "nodemon backend/server"
   },
   "author": "Harsh Solanki",
   "license": "ISC",
@@ -14,7 +14,8 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.0"
+    "mongoose": "^5.13.0",
+    "passport": "^0.4.1"
   },
   "devDependencies": {
     "concurrently": "^6.2.0",
