--- a/package.json
+++ b/package.json
@@ -8,11 +8,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "server": "nodemon backend/server",
     "client": " npm start --prefix client",
-    "dev":"concurrently \"npm run server\" \"npm run client\""
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "Harsh Solanki",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
@@ -21,6 +22,7 @@
   },
   "devDependencies": {
     "concurrently": "^6.2.0",
+    "morgan": "^1.10.0",
     "nodemon": "^2.0.9"
   }
 }
